build_log_v2.txt
warning: `C:\Users\nalum\nih-plug-projects\dtcwpt_morph\.cargo\config` is deprecated in favor of `config.toml`
  |
  = help: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking dtcwpt_morph v0.1.0 (C:\Users\nalum\nih-plug-projects\dtcwpt_morph)
warning: unused import: `nih_plug_egui::EguiState`
 --> src\lib.rs:2:5
  |
2 | use nih_plug_egui::EguiState;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Shape`
 --> src\editor.rs:4:97
  |
4 | use nih_plug_egui::egui::{self, Color32, RichText, Rect, Pos2, Stroke, CornerRadius, UiBuilder, Shape};
  |                                                                                                 ^^^^^

error[E0061]: this method takes 4 arguments but 3 arguments were supplied
   --> src\editor.rs:226:42
    |
226 | ...                   ui.painter().rect_stroke(modal_rect, CornerRadius::same(8), Stroke::new(1.0, TEXT_DIM));
    |                                    ^^^^^^^^^^^--------------------------------------------------------------- argument #4 of type `StrokeKind` is missing
    |
note: method defined here
   --> C:\Users\nalum\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\egui-0.31.1\src\painter.rs:438:12
    |
438 |     pub fn rect_stroke(
    |            ^^^^^^^^^^^
help: provide the argument
    |
226 |                             ui.painter().rect_stroke(modal_rect, CornerRadius::same(8), Stroke::new(1.0, TEXT_DIM), /* StrokeKind */);
    |                                                                                                                   ++++++++++++++++++

error[E0282]: type annotations needed
   --> src\editor.rs:329:56
    |
329 |             egui::show_tooltip(ui.ctx(), response.id, |ui| {
    |                                                        ^^
330 |                 ui.label(format!("Path: {}", path));
    |                 -- type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
329 |             egui::show_tooltip(ui.ctx(), response.id, |ui: /* Type */| {
    |                                                          ++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
   --> src\editor.rs:329:13
    |
329 |                egui::show_tooltip(ui.ctx(), response.id, |ui| {
    |  ______________^^^^^^^^^^^^^^^^^^-__________-----------__-
    | |                                |          |
    | | _______________________________|          argument #2 of type `LayerId` is missing
    | ||
330 | ||                 ui.label(format!("Path: {}", path));
331 | ||             });
    | ||_____________-- argument #4 is missing
    | |______________|
    |                unexpected argument #3
    |
note: function defined here
   --> C:\Users\nalum\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\egui-0.31.1\src\containers\popup.rs:53:8
    |
 53 | pub fn show_tooltip<R>(
    |        ^^^^^^^^^^^^
help: did you mean
    |
329 -             egui::show_tooltip(ui.ctx(), response.id, |ui| {
330 -                 ui.label(format!("Path: {}", path));
331 -             });
329 +             egui::show_tooltip(ui.ctx(), /* LayerId */, response.id, /* add_contents */);
    |

error[E0560]: struct `DtcwptMorph` has no field named `scratch_main_l`
   --> src\lib.rs:114:13
    |
114 |             scratch_main_l: Vec::new(),
    |             ^^^^^^^^^^^^^^ `DtcwptMorph` does not have this field
    |
    = note: all struct fields are already assigned

error[E0560]: struct `DtcwptMorph` has no field named `scratch_main_r`
   --> src\lib.rs:115:13
    |
115 |             scratch_main_r: Vec::new(),
    |             ^^^^^^^^^^^^^^ `DtcwptMorph` does not have this field
    |
    = note: all struct fields are already assigned

error[E0609]: no field `scratch_main_l` on type `&mut DtcwptMorph`
   --> src\lib.rs:186:14
    |
186 |         self.scratch_main_l = vec![0.0; max_size];
    |              ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
186 -         self.scratch_main_l = vec![0.0; max_size];
186 +         self.scratch_sc_l = vec![0.0; max_size];
    |

error[E0609]: no field `scratch_main_r` on type `&mut DtcwptMorph`
   --> src\lib.rs:187:14
    |
187 |         self.scratch_main_r = vec![0.0; max_size];
    |              ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
187 -         self.scratch_main_r = vec![0.0; max_size];
187 +         self.scratch_sc_r = vec![0.0; max_size];
    |

error[E0609]: no field `scratch_main_l` on type `&mut DtcwptMorph`
   --> src\lib.rs:264:22
    |
264 |                 self.scratch_main_l[i] = *sample as f64;
    |                      ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
264 -                 self.scratch_main_l[i] = *sample as f64;
264 +                 self.scratch_sc_l[i] = *sample as f64;
    |

error[E0609]: no field `scratch_main_r` on type `&mut DtcwptMorph`
   --> src\lib.rs:267:22
    |
267 |                 self.scratch_main_r[i] = *sample as f64;
    |                      ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
267 -                 self.scratch_main_r[i] = *sample as f64;
267 +                 self.scratch_sc_r[i] = *sample as f64;
    |

error[E0609]: no field `scratch_main_l` on type `&mut DtcwptMorph`
   --> src\lib.rs:282:68
    |
282 |             self.scratch_sc_l[..num_samples].copy_from_slice(&self.scratch_main_l[..num_samples]);
    |                                                                    ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
282 -             self.scratch_sc_l[..num_samples].copy_from_slice(&self.scratch_main_l[..num_samples]);
282 +             self.scratch_sc_l[..num_samples].copy_from_slice(&self.scratch_sc_l[..num_samples]);
    |

error[E0609]: no field `scratch_main_r` on type `&mut DtcwptMorph`
   --> src\lib.rs:283:68
    |
283 |             self.scratch_sc_r[..num_samples].copy_from_slice(&self.scratch_main_r[..num_samples]);
    |                                                                    ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
283 -             self.scratch_sc_r[..num_samples].copy_from_slice(&self.scratch_main_r[..num_samples]);
283 +             self.scratch_sc_r[..num_samples].copy_from_slice(&self.scratch_sc_r[..num_samples]);
    |

error[E0609]: no field `scratch_main_l` on type `&mut DtcwptMorph`
   --> src\lib.rs:288:23
    |
288 |             &mut self.scratch_main_l[..num_samples],
    |                       ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
288 -             &mut self.scratch_main_l[..num_samples],
288 +             &mut self.scratch_sc_l[..num_samples],
    |

error[E0609]: no field `scratch_main_r` on type `&mut DtcwptMorph`
   --> src\lib.rs:289:23
    |
289 |             &mut self.scratch_main_r[..num_samples],
    |                       ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
289 -             &mut self.scratch_main_r[..num_samples],
289 +             &mut self.scratch_sc_r[..num_samples],
    |

error[E0609]: no field `scratch_main_l` on type `&mut DtcwptMorph`
   --> src\lib.rs:299:32
    |
299 |                 let out = self.scratch_main_l[i] as f32;
    |                                ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
299 -                 let out = self.scratch_main_l[i] as f32;
299 +                 let out = self.scratch_sc_l[i] as f32;
    |

error[E0609]: no field `scratch_main_r` on type `&mut DtcwptMorph`
   --> src\lib.rs:303:32
    |
303 |                 let out = self.scratch_main_r[i] as f32;
    |                                ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
303 -                 let out = self.scratch_main_r[i] as f32;
303 +                 let out = self.scratch_sc_r[i] as f32;
    |

warning: unused variable: `painter`
   --> src\editor.rs:246:9
    |
246 |     let painter = ui.painter();
    |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_painter`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `node_radius`
   --> src\editor.rs:248:9
    |
248 |     let node_radius = 6.0;
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_node_radius`

warning: unused variable: `is_pure_h`
   --> src\processor.rs:352:17
    |
352 | ...   let is_pure_h = dest == 3 || (dest > 1 && (dest & (dest + 1)) == 0 && dest.count_ones() == (dest.trailing_ones())); // Pure H path:...
    |           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_pure_h`

warning: unused variable: `node_ids`
   --> src\processor.rs:539:5
    |
539 |     node_ids: &[usize],
    |     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_node_ids`

Some errors have detailed explanations: E0061, E0282, E0560, E0609.
For more information about an error, try `rustc --explain E0061`.
warning: `dtcwpt_morph` (lib) generated 6 warnings
error: could not compile `dtcwpt_morph` (lib) due to 15 previous errors; 6 warnings emitted
